<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!--title-->
    <TextView
        android:id="@+id/tv_title"
        android:text="@string/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/tv_title"
        />

    <!--title-->
    <TextView
        android:id="@+id/tv_instructions"
        android:text="@string/tv_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/tv_title"
        />



    <!--start button-->
    <Button
        android:id="@+id/btn_start"
        android:text="@string/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btn_next"
        />

</LinearLayout>